// Vitest Snapshot v1

exports[`Form > @event > submit 1`] = `
{
  "firstError": "",
  "validateResult": true,
}
`;

exports[`Form > @event > submit 2`] = `
{
  "firstError": "",
  "validateResult": true,
}
`;

exports[`Form > @event > validate 1`] = `
{
  "firstError": "姓名必填",
  "validateResult": {
    "age": [
      {
        "message": "age必填",
        "required": true,
        "result": false,
      },
    ],
    "name": [
      {
        "message": "姓名必填",
        "required": true,
        "result": false,
      },
    ],
  },
}
`;

exports[`Form > @event > validate 2`] = `
{
  "firstError": "姓名必填",
  "validateResult": {
    "age": [
      {
        "message": "age必填",
        "required": true,
        "result": false,
      },
    ],
    "name": [
      {
        "message": "姓名必填",
        "required": true,
        "result": false,
      },
    ],
  },
}
`;

exports[`Form > @event > validate 3`] = `
{
  "firstError": "age必填",
  "validateResult": {
    "age": [
      {
        "message": "age必填",
        "required": true,
        "result": false,
      },
    ],
  },
}
`;

exports[`Form > @event > validate 4`] = `
{
  "firstError": "",
  "validateResult": true,
}
`;

exports[`Form > function > clearValidate 1`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > function > clearValidate 2`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        姓名必填
      </div>
      
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        age必填
      </div>
      
    </div>,
  },
]
`;

exports[`Form > function > reset 1`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > function > reset 2`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        姓名必填
      </div>
      
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        age必填
      </div>
      
    </div>,
  },
]
`;

exports[`Form > function > reset 3`] = `[]`;

exports[`Form > function > reset 4`] = `[]`;

exports[`Form > function > validate 1`] = `
{
  "age": [
    {
      "message": "age必填",
      "required": true,
      "result": false,
      "trigger": "blur",
    },
  ],
  "name": [
    {
      "message": "姓名必填",
      "required": true,
      "result": false,
      "trigger": "blur",
    },
  ],
}
`;

exports[`Form > function > validate 2`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > function > validate 3`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        姓名必填
      </div>
      
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        age必填
      </div>
      
    </div>,
  },
]
`;

exports[`Form > function > validate 4`] = `true`;

exports[`Form > function > validateOnly 1`] = `
{
  "age": [
    {
      "message": "age必填",
      "required": true,
      "result": false,
      "trigger": "blur",
    },
  ],
  "name": [
    {
      "message": "姓名必填",
      "required": true,
      "result": false,
      "trigger": "blur",
    },
  ],
}
`;

exports[`Form > function > validateOnly 2`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > function > validateOnly 3`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        姓名必填
      </div>
      
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        age必填
      </div>
      
    </div>,
  },
]
`;

exports[`Form > function > validateOnly 4`] = `true`;

exports[`Form > function > validateOnly 5`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > function > validateOnly 6`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        姓名必填
      </div>
      
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-form__controls t-is-error"
      style="margin-left: 100px;"
    >
      <div
        class="t-form__controls-content"
      >
        
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-is-default"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
            />
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <span
          class="t-form__status"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      
      <!---->
      <div
        class="t-input__extra"
      >
        age必填
      </div>
      
    </div>,
  },
]
`;
